--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
  
+
+html, 
+body,
+:root {
+  height: 100%;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Poppins', sans-serif;
+}
+
+p {
+  font-family: 'Lato', sans-serif;
+}
+
+
 @layer base {
   :root {
     --background: 0 0% 100%;
