6: refactor code, add design and ai. Replace current AI with Assistant AI

--- a/app/globals.css
+++ b/app/globals.css
@@ -91,3 +91,22 @@ p {
     @apply bg-background text-foreground;
   }
 }
+
+.scrollbar-w-2::-webkit-scrollbar {
+  width: 0.25rem;
+  height: 0.25rem;
+}
+
+.scrollbar-track-::-webkit-scrollbar-track {
+  --bg-opacity: 0.5;
+  background-color: #1f1f1f;
+}
+
+.scrollbar-thumb::-webkit-scrollbar-thumb {
+  --bg-opacity: 0.5;
+  background-color: #43a855;
+}
+
+.scrollbar-thumb-rounded::-webkit-scrollbar-thumb {
+  border-radius: 7px;
+}
